# mentingo

./: .gitignore  .tool-versions  README.md
apps/api/: .env.example
apps/api/src/: app.module.ts
apps/api/src/dropout-predictor/: dropout-predictor.controller.spec.ts  dropout-predictor.controller.ts  dropout-predictor.module.ts  dropout-predictor.service.ts
apps/api/src/swagger/: api-schema.json
apps/dropout-predictor/: AGENTS.md  README.md  generate_data.py  model.pkl  package.json  pyproject.toml  train.py
apps/dropout-predictor/data/: dropout_training_data.csv
apps/dropout-predictor/src/dropout_predictor/: __init__.py  main.py
apps/dropout-predictor/src/dropout_predictor/api/: routes.py  schemas.py
apps/dropout-predictor/src/dropout_predictor/model/: inference.py
apps/dropout-predictor/src/dropout_predictor/services/: prediction_service.py
apps/dropout-predictor/tests/integration/: test_health_route.py  test_prediction_route.py
apps/dropout-predictor/tests/unit/: test_model_inference.py  test_smoke.py
apps/web/app/modules/Statistics/Admin/: AdminStatistics.tsx
apps/web/app/modules/Statistics/Admin/dropout/: DropoutPredictionWidget.fallback.test.tsx  DropoutPredictionWidget.test.tsx  DropoutPredictionWidget.tsx  dropoutFeatureStore.test.ts  dropoutFeatureStore.ts  useDropoutPrediction.ts
