[project]
name = "dropout-predictor"
version = "0.1.0"
description = "ML microservice for learner dropout risk prediction"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic",
  "numpy",
  "scikit-learn",
  "joblib",
  "pandas>=3.0.2",
]

[dependency-groups]
dev = [
  "pytest",
  "httpx",
  "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
